Update species name from Brachypelma to Tliltocatl

--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
       <th>Temperature / Humidity</th>
     </tr>
     <tr>
-      <td>Brachypelma albopilosum</td>
+      <td>
+Tliltocatl albopilosus</td>
       <td>Honduran Curly Hair</td>
       <td>5–6"</td>
       <td>Docile</td>
