--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       --bg: #050608;
       --bg-soft: #0b0f13;
       --card: #10151b;
-      --accent: #ff6b35;
-      --accent-soft: rgba(255, 107, 53, 0.15);
+      --accent: #40ff40;
+      --accent-soft: rgba(64, 255, 40, 0.15);
       --text: #f5f5f5;
       --muted: #9ba3b5;
       --border: #1f2933;
@@ -22,19 +22,14 @@
 
     body {
       margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        sans-serif;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       background: radial-gradient(circle at top, #151924 0, #050608 50%, #000 100%);
       color: var(--text);
     }
 
     header {
       border-bottom: 1px solid var(--border);
-      background: linear-gradient(
-        to bottom,
-        rgba(0, 0, 0, 0.9),
-        rgba(0, 0, 0, 0.4)
-      );
+      background: linear-gradient(to bottom, rgba(0,0,0,0.9), rgba(0,0,0,0.4));
       backdrop-filter: blur(6px);
       position: sticky;
       top: 0;
@@ -44,11 +39,24 @@
     .header-inner {
       max-width: 960px;
       margin: 0 auto;
-      padding: 14px 16px;
+      padding: 10px 16px;
       display: flex;
       align-items: center;
       justify-content: space-between;
       gap: 12px;
+    }
+
+    .logo-wrap {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .logo-wrap img {
+      height: 48px;
+      width: 48px;
+      border-radius: 50%;
+      object-fit: cover;
     }
 
     .logo-text {
@@ -60,7 +68,7 @@
     .logo-main {
       font-weight: 700;
       letter-spacing: 0.08em;
-      font-size: 0.95rem;
+      font-size: 1rem;
       text-transform: uppercase;
     }
 
@@ -134,8 +142,8 @@
     .hero-card {
       border-radius: 14px;
       border: 1px solid var(--border);
-      background: radial-gradient(circle at top left, rgba(255, 107, 53, 0.18), #0b0f13);
-      padding: 14px 14px 12px;
+      background: radial-gradient(circle at top left, rgba(64,255,40,0.18), #0b0f13);
+      padding: 14px;
       font-size: 0.9rem;
       color: var(--muted);
     }
@@ -159,7 +167,7 @@
       border-radius: 14px;
       border: 1px solid var(--border);
       background: var(--card);
-      padding: 16px 14px 14px;
+      padding: 16px;
       margin-bottom: 20px;
     }
 
@@ -170,8 +178,7 @@
       margin-top: 6px;
     }
 
-    th,
-    td {
+    th, td {
       padding: 8px 10px;
       text-align: left;
       border-bottom: 1px solid #151b23;
@@ -185,21 +192,8 @@
       background: #121821;
     }
 
-    tr:last-child td {
-      border-bottom: none;
-    }
-
     tbody tr:hover {
       background: #151b23;
-    }
-
-    a {
-      color: var(--accent);
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
     }
 
     .pill {
@@ -221,12 +215,6 @@
       background: var(--accent);
     }
 
-    .contact-links p {
-      margin: 4px 0;
-      font-size: 0.95rem;
-      color: var(--muted);
-    }
-
     footer {
       max-width: 960px;
       margin: 0 auto;
@@ -242,10 +230,14 @@
 <body>
   <header>
     <div class="header-inner">
-      <div class="logo-text">
-        <span class="logo-main">TOMMY'S SPIDERS</span>
-        <span class="logo-sub">Tarantulas & exotic pets for beginners</span>
+      <div class="logo-wrap">
+        <img src="logo.png" alt="TommySpiders Logo" />
+        <div class="logo-text">
+          <span class="logo-main">TOMMYSPIDERS</span>
+          <span class="logo-sub">Tarantulas & Exotic Pets</span>
+        </div>
       </div>
+
       <nav>
         <a href="#tarantulas">Tarantulas</a>
         <a href="#other-pets">Other Pets</a>
@@ -255,33 +247,26 @@
   </header>
 
   <main>
+
     <section class="hero">
       <div class="hero-text">
-        <div class="tagline">Tarantula care made simple</div>
-        <h1>Your guide to calm, healthy spiders</h1>
+        <div class="tagline">Tarantula Care Made Simple</div>
+        <h1>Your Guide to Calm, Healthy Spiders</h1>
         <p>
-          I’m Tommy, and this site is all about keeping tarantulas and other exotic pets
-          the right way – clear care sheets, beginner-friendly info, and real hobby experience.
+          Welcome to TommySpiders — your home for tarantula care, beginner guides, 
+          species profiles, and exotic pet information.
         </p>
       </div>
+
       <div class="hero-card">
-        <p>
-          <strong>New here?</strong> Start by picking a species from the list below. Each
-          one will have its own page with care info like temperature, humidity, behaviour,
-          and setup tips.
-        </p>
-        <p style="margin-top:8px;">
-          <strong>Tip:</strong> <em>Brachypelma smithi</em> is a classic beginner tarantula –
-          calm, hardy, and amazing colours.
-        </p>
+        <p><strong>New?</strong> Start by clicking a species below to read a dedicated care sheet.</p>
+        <p style="margin-top:8px;"><strong>Popular pick:</strong> <em>Brachypelma smithi</em></p>
       </div>
     </section>
 
     <section id="tarantulas">
       <h2 class="section-title">Tarantula Species List</h2>
-      <p class="section-sub">
-        Click a species name to view a dedicated care page for that tarantula.
-      </p>
+      <p class="section-sub">Tap a species name to open its care guide page.</p>
 
       <div class="card">
         <table>
@@ -315,6 +300,7 @@
             </tr>
           </tbody>
         </table>
+
         <div class="pill">
           <span class="pill-dot"></span>
           More species coming soon…
@@ -324,46 +310,30 @@
 
     <section id="other-pets">
       <h2 class="section-title">Other Exotic Pets</h2>
-      <p class="section-sub">
-        I’m planning to add care info for scorpions, millipedes, and more. This section
-        is a work in progress.
-      </p>
+      <p class="section-sub">Future care sheets coming soon.</p>
+
       <div class="card">
-        <p>
-          Check back later for care sheets on:
-        </p>
         <ul>
-          <li>Beginner-friendly scorpions</li>
-          <li>Millipedes and isopods</li>
-          <li>Other invertebrates you can keep with similar setups</li>
+          <li>Beginner scorpions</li>
+          <li>Millipedes</li>
+          <li>Isopods</li>
         </ul>
       </div>
     </section>
 
     <section id="contact">
-      <h2 class="section-title">Contact & Socials</h2>
-      <p class="section-sub">
-        Got a question about one of my spiders, or want to suggest a species to add?
-        Reach out here:
-      </p>
-      <div class="card contact-links">
-        <p>
-          Email:
-          <a href="mailto:tommyexoticpets@gmail.com">tommyexoticpets@gmail.com</a>
-        </p>
-        <p>
-          TikTok:
-          <a href="https://www.tiktok.com/@tomspiders2?_r=1&_t=ZN-91X79V4r1de"
-             target="_blank" rel="noopener noreferrer">
-            @tomspiders2
-          </a>
-        </p>
+      <h2 class="section-title">Contact</h2>
+      <div class="card">
+        <p>Email: <a href="mailto:tommyexoticpets@gmail.com">tommyexoticpets@gmail.com</a></p>
+        <p>TikTok: <a href="https://www.tiktok.com/@tomspiders2">tiktok.com/@tomspiders2</a></p>
       </div>
     </section>
+
   </main>
 
   <footer>
-    © 2025 Tommy's Spiders · Hobby care info – always double-check with multiple sources.
+    © 2025 TommySpiders — Tarantula Care & Hobby Info
   </footer>
+
 </body>
 </html>
