Refine layout and logo size in index.html
Adjusted padding and gap sizes for better layout. Reduced logo size for improved fit.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     .header-inner {
       max-width: 960px;
       margin: 0 auto;
-      padding: 10px 16px;
+      padding: 14px 16px; /* increased height */
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -49,14 +49,13 @@
     .logo-wrap {
       display: flex;
       align-items: center;
-      gap: 10px;
+      gap: 12px;
     }
 
     .logo-wrap img {
-      height: 48px;
-      width: 48px;
-      border-radius: 50%;
-      object-fit: cover;
+      height: 36px;  /* reduced to fit nicely */
+      width: 36px;
+      object-fit: contain;
     }
 
     .logo-text {
@@ -253,7 +252,7 @@
         <div class="tagline">Tarantula Care Made Simple</div>
         <h1>Your Guide to Calm, Healthy Spiders</h1>
         <p>
-          Welcome to TommySpiders — your home for tarantula care, beginner guides, 
+          Welcome to TommySpiders — your home for tarantula care, beginner guides,
           species profiles, and exotic pet information.
         </p>
       </div>
