Update video display from TikTok to local video
Replaced TikTok video embed with a direct video element.

--- a/pterinochilus-murinus.html
+++ b/pterinochilus-murinus.html
@@ -56,8 +56,14 @@
       padding-left: 18px;
     }
 
-    .tiktok-wrapper {
-      margin-top: 15px;
+    .video-wrapper {
+      margin-top: 10px;
+    }
+
+    video {
+      width: 100%;
+      border-radius: 12px;
+      outline: none;
     }
   </style>
 </head>
@@ -82,17 +88,19 @@
 
   <div class="card">
     <h2>See the OBT in Action</h2>
-    <p>Here’s one of my own OBT videos from TikTok:</p>
-    <div class="tiktok-wrapper">
-      <blockquote class="tiktok-embed"
-        cite="https://vm.tiktok.com/ZNR1uvjgd/"
-        style="max-width: 325px; min-width: 225px; margin: 0 auto;">
-        <section>
-          <a href="https://vm.tiktok.com/ZNR1uvjgd/">Watch on TikTok</a>
-        </section>
-      </blockquote>
-      <script async src="https://www.tiktok.com/embed.js"></script>
+    <p>Here’s one of my own OBT videos, hosted directly on this site:</p>
+    <div class="video-wrapper">
+      <video controls>
+        <source src="v24044gl0000d42icjp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
     </div>
+    <p style="margin-top: 8px;">
+      Watch this clip on TikTok:
+      <a href="https://vm.tiktok.com/ZNR1uvjgd/" target="_blank" rel="noopener noreferrer">
+        https://vm.tiktok.com/ZNR1uvjgd/
+      </a>
+    </p>
   </div>
 
   <div class="card">
