Revise introduction and care details for OBT
Updated the introduction and care sheet for Pterinochilus murinus, improving clarity on habitat and temperament.

--- a/pterinochilus-murinus.html
+++ b/pterinochilus-murinus.html
@@ -75,18 +75,56 @@
   <h1>Pterinochilus murinus</h1>
   <h3>The Orange Baboon Tarantula (OBT)</h3>
 
+  <!-- INTRODUCTION -->
   <div class="card">
-    <h2>Quick Facts</h2>
+    <h2>Introduction</h2>
+    <p>
+      <em>Pterinochilus murinus</em>, commonly referred to as the OBT (Orange Baboon Tarantula) 
+      or jokingly as the “Orange Bitey Thing,” is a beautiful and often misunderstood Old World 
+      species found across several Central African countries.
+    </p>
+
+    <p>
+      This species occurs in multiple colour forms, but the most commonly encountered in the hobby 
+      is the iconic bright orange morph.
+    </p>
+
+    <p>
+      Despite its reputation for being highly aggressive, this behaviour is often exaggerated and 
+      usually linked to incorrect husbandry rather than true temperament. Although very fast, the OBT 
+      is actually a shy and aloof species that prefers to hide away and avoid unnecessary interaction. 
+      In most situations, it will retreat rather than seek confrontation.
+    </p>
+
+    <p>
+      Interestingly, OBTs are known to display “semi-arboreal” tendencies, creating dense webbing 
+      higher up in the enclosure than typical terrestrial species. At the same time, they may also 
+      show fossorial (burrowing) behaviour — a fascinating combination seldom seen together.
+    </p>
+
+    <p>
+      This species thrives in arid to semi-arid conditions, similar to the dry habitats of its 
+      native regions.
+    </p>
+  </div>
+
+  <!-- QUICK FACTS -->
+  <div class="card">
+    <h2>Quick facts</h2>
     <ul>
       <li><strong>Scientific name:</strong> Pterinochilus murinus</li>
       <li><strong>Common name:</strong> Orange Baboon Tarantula (OBT)</li>
-      <li><strong>Native to:</strong> Central &amp; Southern Africa</li>
-      <li><strong>Temperament:</strong> Extremely defensive and fast</li>
+      <li><strong>Endemic to:</strong> Central Africa</li>
+      <li><strong>DLS:</strong> Approximately 6&quot; (15 cm)</li>
       <li><strong>Growth rate:</strong> Fast</li>
-      <li><strong>Lifestyle:</strong> Heavy webber with fossorial tendencies</li>
+      <li><strong>Life expectancy:</strong> Males 2–4 years, Females 10–15 years</li>
+      <li><strong>Category:</strong> Old World</li>
+      <li><strong>Defence mechanism:</strong> Strong venom, potentially defensive</li>
+      <li><strong>Recommended experience:</strong> Advanced keepers only</li>
     </ul>
   </div>
 
+  <!-- VIDEO -->
   <div class="card">
     <h2>See the OBT in Action</h2>
     <p>Here’s one of my own OBT videos, hosted directly on this site:</p>
@@ -96,31 +134,33 @@
         Your browser does not support the video tag.
       </video>
     </div>
+
     <p style="margin-top: 8px;">
-      Watch this clip on TikTok:
+      Watch the clip on TikTok:
       <a href="https://vm.tiktok.com/ZNR1uvjgd/" target="_blank" rel="noopener noreferrer">
         https://vm.tiktok.com/ZNR1uvjgd/
       </a>
     </p>
   </div>
 
+  <!-- CARE SHEET -->
   <div class="card">
     <h2>Care Sheet</h2>
     <p><strong>Temperature:</strong> 24–28°C</p>
-    <p><strong>Humidity:</strong> 50–70% (good ventilation, don’t keep it swampy)</p>
-    <p><strong>Enclosure:</strong> Dry substrate with plenty of anchor points for webbing, cork bark, and hides.</p>
-    <p><strong>Feeding:</strong> Greedy eater; suitable-sized crickets/roaches 1–2 times per week for juveniles, less for adults.</p>
+    <p><strong>Humidity:</strong> 50–70% (good ventilation, avoid overly moist substrate)</p>
+    <p><strong>Enclosure:</strong> Dry substrate, sturdy anchor points for webbing, cork bark hides</p>
+    <p><strong>Feeding:</strong> Fast eater; offer appropriate-sized crickets/roaches regularly</p>
   </div>
 
+  <!-- TEMPERAMENT -->
   <div class="card">
     <h2>Temperament</h2>
     <p>
-      This species is nicknamed the “Orange Bitey Thing” for a reason. They are very fast,
-      extremely defensive, and will not hesitate to threat pose or strike.
+      The OBT is often portrayed as aggressively defensive, but this is largely due to poor husbandry. 
+      In reality, it is a shy, secretive species that prefers to retreat rather than fight. However, 
+      it <em>will</em> defend itself if provoked, and keepers should always use caution.
     </p>
-    <p>
-      <strong>Not recommended for beginners.</strong> Enjoy them as a display species – no handling.
-    </p>
+    <p><strong>No handling recommended.</strong></p>
   </div>
 
 </body>
